--- a/data/blog/toList/blast-plan.mdx
+++ b/data/blog/toList/blast-plan.mdx
@@ -4,7 +4,7 @@ date: '2021-06-30'
 lastmod: '2021-11-21'
 tags: ['学堂在线', '疾风计划', 'todo']
 draft: false
-summary: '疾风计划设置(11+2)任务模式，涵盖 `11门必修课`+`2门选修课`，专业选修课可根据自身兴趣在选课表中任选。'
+summary: '疾风计划设置(11+2)任务模式，涵盖11门必修课+2门选修课，专业选修课可根据自身兴趣在选课表中任选'
 authors: ['default']
 layout: PostSimple
 ---
@@ -13,7 +13,7 @@ layout: PostSimple
 
 <TOCInline toc={props.toc} exclude="简介" toHeading={2} />
 
-疾风计划^[[学堂在线](https://www.xuetangx.com/)] ^[[学堂在线-疾风计划](https://www.xuetangx.com/program/XT08090037782102?channel=i.area.learn_title)]
+疾风计划^[[学堂在线](https://www.xuetangx.com/)] ^[[疾风计划](https://www.xuetangx.com/program/XT08090037782102?channel=i.area.learn_title)]
 设置(11+2)任务模式，涵盖 `11门必修课`+`2门选修课`，
 专业选修课可根据自身兴趣在选课表中任选。^[[教学安排](https://docs.qq.com/sheet/DQlNsaUhHanJ3Rnhv?tab=ppxiem&_t=1637506279345)]
 
@@ -40,4 +40,5 @@ layout: PostSimple
 ## 教学安排
 
 ![plan-1](/static/images/blastPlan/plan-1.png)
+
 ![plan-2](/static/images/blastPlan/plan-2.png)
