--- a/data/blog/study-plan/blast-plan.mdx
+++ b/data/blog/study-plan/blast-plan.mdx
@@ -26,16 +26,16 @@ layout: PostSimple
 - [x] 【2021/09/11 - 2021/09/20】数据结构（下）
 - [x] 【2021/09/21 - 2021/10/10】算法设计与分析
 - [x] 【2021/10/11 - 2021/11/1】计算机组成原理
-- [ ] 【2021/11/01 - 】操作系统
-- [ ] 【 - 】计算机网络
-- [ ] 【 - 】数据库系统原理与开发
-- [ ] 【 - 】编译原理
-- [ ] 【 - 】软件工程
+- [x] 【2021/11/01 - 2022/3/6】操作系统
+- [x] 【2022/3/7 - 2022/3/12】数据库系统原理与开发
+- [] 【2022/3/13 - 2022/3/20】编译原理
+- [ ] 【2022/3/21 - 2022/4/5】计算机网络
+- [ ] 【2022/4/6 - 2022/4/31】软件工程
 
 ## 选修课
 
-- [ ] 【 - 】数据挖掘：理论与算法
-- [ ] 【 - 】大数据机器学习
+- [ ] 【2022/5/1 - 2022/5/31】数据挖掘：理论与算法
+- [ ] 【2022/6/1 - 2022/6/30】大数据平台核心技术
 
 ## 教学安排
 
