--- a/data/blog/study-plan/blast-plan.mdx
+++ b/data/blog/study-plan/blast-plan.mdx
@@ -28,9 +28,9 @@ layout: PostSimple
 - [x] 【2021/10/11 - 2021/11/1】计算机组成原理
 - [x] 【2021/11/01 - 2022/3/6】操作系统
 - [x] 【2022/3/7 - 2022/3/12】数据库系统原理与开发
-- [] 【2022/3/13 - 2022/3/20】编译原理
-- [ ] 【2022/3/21 - 2022/4/5】计算机网络
-- [ ] 【2022/4/6 - 2022/4/31】软件工程
+- [x] 【2022/3/13 - 2022/3/17】编译原理
+- [ ] 【2022/3/18 - 2022/4/5】软件工程
+- [ ] 【2022/4/6 - 2022/4/31】计算机网络
 
 ## 选修课
 
