--- a/data/blog/study-plan/blast-plan.mdx
+++ b/data/blog/study-plan/blast-plan.mdx
@@ -26,11 +26,11 @@ layout: PostSimple
 - [x] 【2021/09/11 - 2021/09/20】数据结构（下）
 - [x] 【2021/09/21 - 2021/10/10】算法设计与分析
 - [x] 【2021/10/11 - 2021/11/1】计算机组成原理
-- [x] 【2021/11/01 - 2022/3/6】操作系统
-- [x] 【2022/3/7 - 2022/3/12】数据库系统原理与开发
-- [x] 【2022/3/13 - 2022/3/17】编译原理
-- [ ] 【2022/3/18 - 2022/4/5】软件工程
-- [ ] 【2022/4/6 - 2022/4/31】计算机网络
+- [x] 【2021/11/01 - 2022/03/6】操作系统
+- [x] 【2022/03/7 - 2022/03/12】数据库系统原理与开发
+- [x] 【2022/03/13 - 2022/03/17】编译原理
+- [x] 【2022/03/18 - 2022/03/20】软件工程
+- [ ] 【2022/03/21 - 2022/04/31】计算机网络
 
 ## 选修课
 
