--- a/data/blog/study-plan/blast-plan.mdx
+++ b/data/blog/study-plan/blast-plan.mdx
@@ -30,11 +30,11 @@ layout: PostSimple
 - [x] 【2022/03/7 - 2022/03/12】数据库系统原理与开发
 - [x] 【2022/03/13 - 2022/03/17】编译原理
 - [x] 【2022/03/18 - 2022/03/20】软件工程
-- [ ] 【2022/03/21 - 2022/04/31】计算机网络
+- [x] 【2022/03/21 - 2022/03/27】计算机网络
 
 ## 选修课
 
-- [ ] 【2022/5/1 - 2022/5/31】数据挖掘：理论与算法
+- [ ] 【2022/3/28 - 2022/5/31】数据挖掘：理论与算法
 - [ ] 【2022/6/1 - 2022/6/30】大数据平台核心技术
 
 ## 教学安排
