数据挖掘：理论与算法 确实不错;

--- a/data/blog/study-plan/blast-plan.mdx
+++ b/data/blog/study-plan/blast-plan.mdx
@@ -34,8 +34,8 @@ layout: PostSimple
 
 ## 选修课
 
-- [ ] 【2022/3/28 - 2022/5/31】数据挖掘：理论与算法
-- [ ] 【2022/6/1 - 2022/6/30】大数据平台核心技术
+- [x] 【2022/3/28 - 2022/4/10】数据挖掘：理论与算法
+- [ ] 【2022/4/11 - 2022/6/30】大数据平台核心技术
 
 ## 教学安排
 
